# aws-audit

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  TESTING.md  pyproject.toml  requirements.txt  tasks.py
.github/workflows/: publish-pypi.yml  test.yml
.snapshots/: .active  .index.yaml  480738299408-daybreak-2025-10-28-091126.yaml  baseline-2025-10-27-182853.yaml  daybreak.yaml  initial.yaml  inventories.yaml
.specify/memory/: constitution.md
specs/001-aws-baseline-snapshot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-aws-baseline-snapshot/checklists/: requirements.md
specs/001-aws-baseline-snapshot/contracts/: cli-commands.md
specs/002-inventory-management/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-inventory-management/checklists/: requirements.md
src/: __init__.py
src/aws/: __init__.py  client.py  credentials.py  rate_limiter.py
src/cli/: __init__.py  config.py  main.py
src/cost/: __init__.py  analyzer.py  explorer.py  reporter.py
src/delta/: __init__.py  calculator.py  reporter.py
src/models/: __init__.py  cost_report.py  delta_report.py  inventory.py  report.py  resource.py  snapshot.py
src/snapshot/: __init__.py  capturer.py  filter.py  inventory_storage.py  report_formatter.py  reporter.py  storage.py
src/snapshot/resource_collectors/: __init__.py  apigateway.py  backup.py  base.py  cloudformation.py  cloudwatch.py  codebuild.py  codepipeline.py  dynamodb.py  ec2.py  ecs.py  eks.py  elb.py  eventbridge.py  iam.py  kms.py  lambda_func.py  rds.py  route53.py  s3.py  secretsmanager.py  sns.py  sqs.py  ssm.py  stepfunctions.py  vpcendpoints.py  waf.py
src/utils/: __init__.py  export.py  hash.py  logging.py  pagination.py  paths.py  progress.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: __init__.py  test_inventory_cli.py  test_inventory_cli_manual.py  test_report_cli.py
tests/unit/: __init__.py  test_cost_analyzer.py  test_export.py  test_inventory_model.py  test_inventory_storage.py  test_pagination.py  test_paths.py  test_report_formatter.py  test_report_models.py  test_resource_filter.py  test_resource_model.py  test_snapshot_model.py  test_snapshot_reporter.py  test_snapshot_storage.py  test_threading.py
